force-app/main/default/objects/Eligible_Product_Line_Item__c/Eligible_Product_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Eligible Product Line Item</label>
    <nameField>
        <displayFormat>EPPLI-{000000}</displayFormat>
        <label>Eligible Product Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Eligible Product Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>