force-app/main/default/objects/Eligible_Product_Line_Item__c/fields/Customer_Facing_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Facing_Name__c</fullName>
    <formula>Product__r.Customer_Facing_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Facing Name</label>
    <type>Text</type>
</CustomField>