force-app/main/default/objects/Eligible_Product_Line_Item__c/fields/Eligible_Product__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Product__c</fullName>
    <label>Eligible Product</label>
    <referenceTo>Eligible_Products__c</referenceTo>
    <relationshipLabel>Eligible Product Line Items</relationshipLabel>
    <relationshipName>Eligible_Product_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>