force-app/main/default/objects/Eligible_Product_Line_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Eligible Product Line Items</relationshipLabel>
    <relationshipName>Eligible_Product_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>